@@ -1,0 +1,4 @@
+#
+#	Object files specific for Nt
+#
+<mkfile-Inferno
